--- a/main.css
+++ b/main.css
@@ -5,6 +5,21 @@ body {
   place-items: center;
   padding: 0 15px;
 }
+body ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6,
+body p {
+  margin: 0;
+  padding: 0;
+}
 
 img {
   width: 100%;
@@ -12,7 +27,6 @@ img {
   height: 150px;
   -o-object-fit: unset;
      object-fit: unset;
-  border: 2px solid black;
   border-radius: 4px;
 }
 
@@ -25,7 +39,60 @@ img {
 }
 
 .container-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 50px;
+  letter-spacing: 0.03em;
   text-align: center;
+  padding: 50px 0;
+}
+
+.container-item {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid black;
+  border-radius: 4px;
+}
+.container-item:hover {
+  border: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.container-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transform: translatey(-100%);
+  visibility: visible;
+  transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.container-item:hover .container-overlay {
+  transform: translateY(47%);
+}
+
+.container-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 1000;
+  font-size: 30px;
+  text-align: end;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.container-text.Belgium, .container-text.Albania {
+  color: white;
+}
+.container-text.Egypt, .container-text.India, .container-text.Algeria {
+  text-align: center;
+}
+.container-item:hover .container-text.Egypt, .container-item:hover .container-text.India, .container-item:hover .container-text.Algeria {
+  transform: translateY(-170%);
+}
+.container-text.Iceland, .container-text.Serbia {
+  text-align: right;
+}
+.container-item:hover .container-text.Iceland, .container-item:hover .container-text.Serbia {
+  transform: translateY(-170%);
 }
 
 @media screen and (min-width: 400px) {
@@ -44,21 +111,21 @@ img {
     grid-template-rows: repeat(5, 150px);
   }
 
-  img:nth-of-type(2) {
+  .container-item:nth-of-type(2) {
     grid-column: 2/span 2;
   }
-  img:nth-of-type(3) {
+  .container-item:nth-of-type(3) {
     grid-column: 4/4;
     grid-row: 1/span 2;
   }
-  img:nth-of-type(4) {
+  .container-item:nth-of-type(4) {
     grid-column: 1/1;
     grid-row: 2/span 2;
   }
-  img:nth-of-type(8) {
+  .container-item:nth-of-type(8) {
     grid-column: 3/span 2;
   }
-  img:nth-of-type(10) {
+  .container-item:nth-of-type(10) {
     grid-column: 2/2;
     grid-row: 4/span 2;
   }
