--- a/main.scss
+++ b/main.scss
@@ -1,19 +1,34 @@
 body {
   margin: 0 auto;
-  //   width: 100vh;
   background-color: darkgray;
   display: grid;
   place-items: center;
   padding: 0 15px;
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
+
 img {
   width: 100%;
   display: block;
   height: 150px;
   object-fit: unset;
-  border: 2px solid black;
   border-radius: 4px;
 }
+
 .container {
   max-width: 1200px;
   display: grid;
@@ -21,9 +36,71 @@ img {
   margin: 0 auto;
   width: 100%;
 }
+
 .container-title {
+  font-family: "Montserrat", sans-serif;
+  font-size: 50px;
+  letter-spacing: 0.03em;
   text-align: center;
+  padding: 50px 0;
 }
+
+.container-item {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid black;
+  border-radius: 4px;
+
+  &:hover {
+    border: none;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.container-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transform: translatey(-100%);
+  visibility: visible;
+
+  transition: transform 400ms  cubic-bezier(0.4, 0, 0.2, 1);
+  .container-item:hover & {
+    transform: translateY(47%);
+  }
+}
+.container-text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 1000;
+  font-size: 30px;
+  text-align: end;
+  text-align: center;
+
+  letter-spacing: 0.03em;
+  &.Belgium,
+  &.Albania {
+    color: white;
+  }
+  &.Egypt,
+  &.India,
+  &.Algeria {
+    text-align: center;
+    .container-item:hover & {
+      transform: translateY(-170%);
+    }
+  }
+  &.Iceland,
+  &.Serbia {
+    text-align: right;
+    .container-item:hover & {
+      transform: translateY(-170%);
+    }
+  }
+}
+
 
 @media screen and (min-width: 400px) {
   .container {
@@ -40,7 +117,7 @@ img {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 150px);
   }
-  img {
+  .container-item {
     &:nth-of-type(2) {
       grid-column: 2 / span 2;
     }
